Covered session authentication with Passport

--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ JWT_REFRESH_TOKEN_TTL=86400
 
 GOOGLE_CLIENT_ID = YOUR_ID_HERE
 GOOGLE_CLIENT_SECRET = YOUR_SECRET_HERE
+
+TFA_APP_NAME=auth-playground
+
+# For Passport & Express session
+SESSION_SECRET=RANDOMSTRING
